--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "parcial-web",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "npm": "^6.11.3",
-    "react": "^16.4.2",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.4.2",
-    "react-router-bootstrap": "^0.25.0",
+    "axios": "^0.19.0",
+    "material-ui": "^0.20.2",
+    "mdbreact": "^4.21.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "1.1.4",
+    "react-tap-event-plugin": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,26 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "keywords": [
-    "ejemplo",
-    "mern",
-    "react"
-  ],
-  "author": "Juan Sebastian Gomez Rosas (muddokon)",
-  "license": "MPL",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "proxy": "http://localhost:5000"
 }
