--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "4.5.1",
     "axios": "^0.19.0",
     "material-ui": "^0.20.2",
+    "@material-ui/core": "latest",
     "mdbreact": "^4.21.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "react-minimal-pie-chart": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
